fix: change gap 30 to 20 in learning__list

--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -174,7 +174,7 @@ body {
 
 .learning__list {
 	display:flex;
-	gap: 30px;
+	gap: 20px;
 	flex-direction: column;
 }
 
